syntax = "proto3";

package api.proto.v1;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// easyp generate

service BookAPI {
    rpc AddBook (AddBookRequest) returns (AddBookResponse) {
        option (google.api.http) = {
            post: "/book"
            body: "*"
        };
    
    }
    rpc GetBook (GetBookRequest) returns (GetBookResponse){
        option (google.api.http) = {
            get: "/book"
        };
    }
    rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse) {
        option (google.api.http) = {
            put: "/book"
            body: "*"
        };    
    }  
    rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse){
        option (google.api.http) = {
            delete: "/book"
        };    
    } 
    rpc AllBooks (AllBooksRequest) returns (AllBooksResponse){
        option (google.api.http) = {
            get: "/books"
        };
    }    
 }
 message AllBooksRequest{
    int64 limit = 1;
 }
 message AllBooksResponse{
    repeated Book1 book1 = 1;
 }
 message Book1 {
    int64 id = 1;
    string title = 2;
    int32 year = 3;
    google.protobuf.Timestamp cteated_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}
message DeleteBookRequest{
    int64 id = 1;
}
message DeleteBookResponse{
    int64 id = 1;
}

message UpdateBookRequest{
    int64 id = 1;
    string title = 2;
    int32 year = 3;
}  
message UpdateBookResponse{
    Book book = 1;
} 


message GetBookRequest{
    int64 id = 1;
}

message GetBookResponse{
Book book = 1;
}

message AddBookRequest{

string title = 1;
int32 year = 2;

}

message AddBookResponse {
Book book = 1;
}

message Book {
    int64 id = 1;
    string title = 2;
    int32 year = 3;
    google.protobuf.Timestamp cteated_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

